can mark an item by complete by getting it by its name

--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -18,6 +18,8 @@
 <!--    <li th:text="'Name: ' + ${todoItem.getName()} + ' Completed: ' + ${todoItem.getCompleted()}"></li>-->
         <li th:text="'Name: ' + ${todoItem.getName()}"></li>
         <li th:text="'Completed: ' + ${todoItem.getCompleted()}"></li>
+<!--        <a th:href="@{/order/details(id=${order.id})}">-->
+        <li><a th:href="@{/todo/complete(name=${todoItem.getName()})}">Mark as Complete</a></li>
     </ul>
 </th:block>
 
