--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -7,7 +7,7 @@
 <body>
 <!-- todoList ${todoList} -->
 <h3>Add a new Todo Item:</h3>
-<form method="post">
+<form method="post" action="/todo">
     <label>New Item Name: <input type="text" name="value"></label>
     <input type="submit" value="Add Item">
 </form>
