--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -20,7 +20,9 @@
         <li th:text="'Name: ' + ${todoItem.getName()}"></li>
         <li th:text="'Completed: ' + ${todoItem.getCompleted()}"></li>
 <!--        <a th:href="@{/order/details(id=${order.id})}">-->
-        <li><a th:href="@{/todo/complete(id=${todoItem.getId()})}">Mark as Complete</a></li>
+        <th:block th:if="${!todoItem.getCompleted()}">
+            <li><a th:href="@{/todo/complete(id=${todoItem.getId()})}">Mark as Complete</a></li>
+        </th:block>
         <li><a th:href="@{/todo/delete(id=${todoItem.getId()})}">Delete Item</a></li>
     </ul>
 </th:block>
