--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<div th:replace="fragments :: menu"></div>
+<div th:fragment="menu">
+  <h1>MENU</h1>
+</div>
 </body>
 </html>
