--- a/src/main/resources/templates/deleted-todo.html
+++ b/src/main/resources/templates/deleted-todo.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>PREVIOUSLY DELETED ITEMS</title>
-</head>
+<head th:replace="fragments :: head"></head>
 <body>
 <!-- todoList ${todoList} -->
 <div th:replace="fragments :: menu"></div>
