--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head th:replace="fragments :: head"></head>
 <body>
+<div class="container-fluid">
 <div th:replace="fragments :: menu"></div>
+</div>
 </body>
 </html>
