--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,15 +9,29 @@
     <title>My Todo List</title>
 </head>
 <body>
-<div th:fragment="menu">
-  <h5>MENU</h5>
-    <ul>
-        <li><a href="/todo">All Todo Items</a></li>
-        <li><a href="/todo/finished">Finished Todo Items</a></li>
-        <li><a href="/todo/unfinished">Unfinished Todo Items</a></li>
-        <li><a href="/todo/deleted">Previously Deleted Todo Items</a></li>
-    </ul>
-
+<div th:fragment="menu" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-header">
+        <a th:href="@{/todo}" class="navbar-brand">TodoItems</a>
+    </div>
+    <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+            <li><a th:href="@{/todo}">All Todo Items</a></li>
+            <li><a th:href="@{/todo/finished}">Finished Todo Items</a></li>
+            <li><a th:href="@{/todo/unfinished}">Unfinished Todo Items</a></li>
+            <li><a th:href="@{/todo/deleted}">Previously Deleted Todo Items</a></li>
+        </ul>
+    </div>
 </div>
+<!--    <nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<!--        <div class="container-fluid">-->
+<!--            <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
+<!--                <li class="nav-item"><a class="nav-link" href="/todo">All Todo Items</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" href="/todo/finished">Finished Todo Items</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" href="/todo/unfinished">Unfinished Todo Items</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" href="/todo/deleted">Previously Deleted Todo Items</a></li>-->
+<!--            </ul>-->
+
+<!--        </div>-->
+<!--    </nav>-->
 </body>
 </html>
