--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -12,19 +12,22 @@
     </form>
 
     <h3>Todo Items:</h3>
-    <th:block th:each="todoItem : ${todoList}">
-        <ul>
-    <!--    <li th:text="'Name: ' + ${todoItem.getName()} + ' Completed: ' + ${todoItem.getCompleted()}"></li>-->
-            <li th:text="'ID: ' + ${todoItem.getId()}"></li>
-            <li th:text="'Name: ' + ${todoItem.getName()}"></li>
-            <li th:text="'Completed: ' + ${todoItem.getCompleted()}"></li>
-    <!--        <a th:href="@{/order/details(id=${order.id})}">-->
-            <th:block th:if="${!todoItem.getCompleted()}">
-                <li><a th:href="@{/todo/complete(id=${todoItem.getId()})}">Mark as Complete</a></li>
-            </th:block>
-            <li><a th:href="@{/todo/delete(id=${todoItem.getId()})}">Delete Item</a></li>
-        </ul>
-    </th:block>
+    <table class="table">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Completed</th>
+                <th>Mark as Complete?</th>
+                <th>Delete?</th>
+            </tr>
+            <tr th:each="todoItem : ${todoList}">
+                <td th:text="${todoItem.getId()}"></td>
+                <td th:text="${todoItem.getName()}"></td>
+                <td th:text="${todoItem.getCompleted()}"></td>
+                <td><th:block th:if="${!todoItem.getCompleted()}"><a th:href="@{/todo/complete(id=${todoItem.getId()})}">Mark Complete</a></th:block></td>
+                <td><a th:href="@{/todo/delete(id=${todoItem.getId()})}">Delete Item</a></td>
+            </tr>
+    </table>
 </div>
 </body>
 </html>
